--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.10.4",
     "nodemon": "^2.0.13",
     "typescript": "^4.4.4"
@@ -21,8 +22,12 @@
     "@mikro-orm/core": "^4.5.9",
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
+    "apollo-server-express": "^3.4.0",
     "dotenv": "^10.0.0",
-    "pg": "^8.7.1"
+    "express": "^4.17.1",
+    "graphql": "^15.6.1",
+    "pg": "^8.7.1",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
